--- a/HTML/Intermedio/3.Select-Option-Datalist/index copy.html
+++ b/HTML/Intermedio/3.Select-Option-Datalist/index copy.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Text Area</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles copy.css">
 </head>
 <body>
     <form >
@@ -22,7 +22,31 @@
             <label >Mensaje</label>
             <textarea placeholder="Deja tu mensaje"></textarea>
         </div>
+        <!-- SELECT / OPTIONS -->
+        <div class="form_input">
+            <label>Tipo de Usuario
+            <select name="type-of-user" id="">
+                <option value="user1">Seguidor</option>
+                <option value="user2">Empresa</option>
+                <option value="user3">Otros</option>
+            </select>
+        </label>
+        </div>
 
+        <!-- DATALIST / OPTIONS -->
+        <div class="form_input">
+        <label>Referente
+        <!-- debe hacer si o si un input en los  datalist -->
+         <!-- y el value , que si no lo coloco, se va a convertir en el campo seleccionado ejemplo Seguidor, pero lo que se envia siempre es el value. -->
+        <input type="text" list="referente" >
+        <datalist id="referente">
+            <option >Seguidor</option>
+            <option >Empresa</option>
+            <option >Un amigo/a</option>
+        </datalist>
+    </label>
+    </div>
+        <!-- TEXTAREA -->
         <div class="form_input">
             <textarea readonly placeholder="Que onda amigo, no me podes modificar"></textarea>
         </div>
